# dasyuridia

./: .gitignore  .gitmodules  LICENSE  Makefile  cabal.project  dasyuridia.cabal  dasyuridia.lua  slack.lua
app/: Main.hs
lib/: poll_stdin.c
